--- a/Week3/AcessoBancoDeDados/.classpath
+++ b/Week3/AcessoBancoDeDados/.classpath
@@ -7,5 +7,16 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/postgresql-42.6.0.jar"/>
+	<classpathentry kind="lib" path="lib/checker-qual-3.5.0.jar"/>
+	<classpathentry kind="lib" path="lib/dbunit-2.7.3.jar"/>
+	<classpathentry kind="lib" path="lib/ojdbc8-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/ons-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/oraclepki-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/osdt_cert-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/osdt_core-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/simplefan-19.3.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/ucp-19.3.0.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
